// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image - imported as '{ Img }' should render image correctly without width 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Student sitting an exam"
  className="c0"
  height={576}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcSet="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  width={null}
/>
`;

exports[`Image - imported as '{ Img }' should render image with custom dimensions correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="By Elisa Decker, from her series \\"Sidewalk\\""
  className="c0"
  height={547}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/164BB/production/_104032319_03270dcc-9dda-4bd4-96a0-db89f6b915ae.jpg"
  srcSet={null}
  width={445}
/>
`;

exports[`Image - imported as '{ Img }' should render image with srcset correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Student sitting an exam"
  className="c0"
  height={576}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcSet="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  width={1024}
/>
`;

exports[`Image - imported as '{ Img }' should render landscape image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Student sitting an exam"
  className="c0"
  height={576}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcSet={null}
  width={1024}
/>
`;

exports[`Image - imported as '{ Img }' should render portrait image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
  className="c0"
  height={1280}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  srcSet={null}
  width={1024}
/>
`;

exports[`Image - imported as '{ Img }' should render square image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Tracks through the snow"
  className="c0"
  height={1024}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/114FE/production/_104801907_79010.jpg"
  srcSet={null}
  width={1024}
/>
`;

exports[`Image - imported as default 'Image' should render image correctly without width 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Student sitting an exam"
  className="c0"
  height={576}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcSet="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  width={null}
/>
`;

exports[`Image - imported as default 'Image' should render image with custom dimensions correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="By Elisa Decker, from her series \\"Sidewalk\\""
  className="c0"
  height={547}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/164BB/production/_104032319_03270dcc-9dda-4bd4-96a0-db89f6b915ae.jpg"
  srcSet={null}
  width={445}
/>
`;

exports[`Image - imported as default 'Image' should render image with srcset correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Student sitting an exam"
  className="c0"
  height={576}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcSet="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  width={1024}
/>
`;

exports[`Image - imported as default 'Image' should render landscape image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Student sitting an exam"
  className="c0"
  height={576}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcSet={null}
  width={1024}
/>
`;

exports[`Image - imported as default 'Image' should render portrait image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
  className="c0"
  height={1280}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  srcSet={null}
  width={1024}
/>
`;

exports[`Image - imported as default 'Image' should render square image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Tracks through the snow"
  className="c0"
  height={1024}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/114FE/production/_104801907_79010.jpg"
  srcSet={null}
  width={1024}
/>
`;

exports[`Image - with Fade-in effect' should render image correctly without width 1`] = `
.c0 {
  display: block;
  width: 100%;
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-name: eMLfYp;
  animation-name: eMLfYp;
}

<img
  alt="Student sitting an exam"
  className="c0"
  height={576}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcSet="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  width={null}
/>
`;

exports[`Image - with Fade-in effect' should render image with custom dimensions correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="By Elisa Decker, from her series \\"Sidewalk\\""
  className="c0"
  height={547}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/164BB/production/_104032319_03270dcc-9dda-4bd4-96a0-db89f6b915ae.jpg"
  srcSet={null}
  width={445}
/>
`;

exports[`Image - with Fade-in effect' should render image with srcset correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Student sitting an exam"
  className="c0"
  height={576}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcSet="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/7098/production/_104842882_students.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/7098/production/_104842882_students.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/7098/production/_104842882_students.jpg 1024w"
  width={1024}
/>
`;

exports[`Image - with Fade-in effect' should render landscape image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Student sitting an exam"
  className="c0"
  height={576}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/7098/production/_104842882_students.jpg"
  srcSet={null}
  width={1024}
/>
`;

exports[`Image - with Fade-in effect' should render portrait image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
  className="c0"
  height={1280}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  srcSet={null}
  width={1024}
/>
`;

exports[`Image - with Fade-in effect' should render square image correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
}

<img
  alt="Tracks through the snow"
  className="c0"
  height={1024}
  sizes="100vw"
  src="https://ichef.bbci.co.uk/news/300/cpsprodpb/114FE/production/_104801907_79010.jpg"
  srcSet={null}
  width={1024}
/>
`;
